# ts2py

./: .pre-commit-config.yaml  README.md  pyproject.toml  ts2pythonParser.py
.github/workflows/: publish.yml  pypi.yml
ts2py/: __init__.py  main.py
ts2py/assets/: ts2pyParser.ini
ts2py/syntax/: __init__.py  ast.py  compiler.py  parser.py  preprocessor.py
ts2py/types/: __init__.py  args.py  dhparser.py
ts2py/utils/: __init__.py  config.py  helper.py  logger.py
ts2python/: __init__.py  json_validation.py  main.py  singledispatch_shim.py  typeddict_shim.py  typing_extensions.py
ts2python/syntax/: __init__.py  ast.py  compiler.py  parser.py  preprocessor.py
ts2python/types/: __init__.py
ts2python/utils/: __init__.py  config.py  logger.py
