[tool.poetry]
name = "ts2py"
version = "0.0.1"
description = "Python-Interoperability for Typescript-Interfaces"

license = "Apache-2.0"

authors = ["Eckhart Arnold <eckhart.arnold@posteo.de>", "Angelo Delicato <thelicato@duck.com>"]

readme = "README.md"
repository = "https://github.com/thelicato/ts2py"
homepage = "https://github.com/thelicato/ts2py"

keywords = [
    'Typescript to Python converter',
    'Typescript Interface',
    'Python TypedDict',
]

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Environment :: Console',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Text Processing :: Markup',
    'Topic :: Software Development :: Code Generators',
    'Topic :: Software Development :: Compilers'
]

packages = [
    { include = "ts2py" }
]


[tool.poetry.dependencies]
python = "^3.10"
dhparser = "^1.3.3"
typing-extensions = "^4.4.0"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.pylint."MESSAGES CONTROL"]
confidence = ''
disable = '''
missing-function-docstring,
missing-module-docstring,
missing-class-docstring
'''

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = 'ts2py/.*\.pyi?'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry.scripts]
ts2py = 'ts2py.main:main'

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
pre-commit = "^2.21.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
